--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front Page</title>
     <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/phone_ver.css" rel="stylesheet"/>
      
   </head>
   <body>
