--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="banner">
       <div class="navbar">
-        <img src="pics/myLogo.png" alt="Chriscent Production" class="logo">
+        <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" alt="Chriscent Production" class="logo"></a>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Projects</a></li>
@@ -20,11 +20,30 @@
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
+
+      <div id="explore">
+        <p>This is my scratch website where <br> I learn html and implement stuff <br> I've learned from the internet!</p>
+      </div>
+
     </div>
     
     <!-- This is for the onwards -->
-    <div>
+    <div class="menu">
+      <a href="https://www.facebook.com/ChriscentProduction/"><img src="pics/hamburgerIcon.png" alt="Chriscent Production" class="icon"></a>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div>
 
+    <div class="content">
+      <div id="socials">
+        <a href="https://www.facebook.com/ChriscentProduction/"><button type="button">Visit my Facebook</button></a>
+        <a href="https://ngl.link/kshn.shrills_0w0"><button type="button">Ask a Question</button></a>
+      </div>
     </div>
 
 
