Feel lng nako...

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" alt="Chriscent Production" class="logo"></a>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="projects.html">Projects</a></li>
           <li><a href="#">#</a></li>
           <li><a href="#">#</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
+      <!-- Remove this -->
       <div id="intro">
         <h1>Knowledge is Power</h1>
         <p>Always strive to learn new things and be sure to apply the Knowledge you <br> recieve into practice in order to understand the process!</p>
@@ -78,14 +79,14 @@
       </section>
 <!-- Card Content -->
     </div>
-  <script>
-    function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-    }
-    function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-    }
-  </script>
+    <script>
+      function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+      }
+      function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+      }
+    </script>
   </body>
   <footer>
 <!-- Empty for Now!-->
