--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
         </header>
         
         <div class="modal-center">
-          <h1 id="pfft">UNDER CONSTRUCTION... LEAVE NOW!!! </h1><p>Go back to <a href="index.html">Home!</a></p>
+          <h1 id="pfft">UNDER CONSTRUCTION... LEAVE NOW!!! </h1>
+          <p>Go back to <a href="index.html">Home!</a></p>
         </div>
 
         <footer class="modal-foot">
