Sharo lage dili mo work

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <!-- Website version -->
     <div class="socialnav-container">
       <div class="socialnav">
-        <div class="facebook">face</div>
-        <div class="instagram">ins</div>
-        <div class="twitter">twi</div>
+        <a href="https://www.facebook.com/ChriscentProduction/" style="text-decoration: none; color: black;"><div class="facebook">Facebook</div></a>
+        <a href="instagram.com/kshn.shrills_0w0/" style="text-decoration: none; color: black;"><div class="instagram">Instagram</div></a>
+        <a href="https://twitter.com/BestieKishon" style="text-decoration: none; color: black;"><div class="twitter">Twitter</div></a>
       </div>
     </div>
     <div class="banner">
@@ -23,8 +23,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="#">#</a></li>
-          <li><a href="#">#</a></li>
+          <li><a href="error_page.html">Blog</a></li>
+          <li><a href="error_page.html">Contacts</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
@@ -48,9 +48,9 @@
         <img src="pics/profilelogo.jpg" id="sidenav-profile">
       </div>
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a class="sidenav-buttons" href="#">Home</a>
-      <a class="sidenav-buttons" href="#">Projects</a>
-      <a class="sidenav-buttons" href="#">News</a>
+      <a class="sidenav-buttons" href="error_page.html">Home</a>
+      <a class="sidenav-buttons" href="error_page.html">Projects</a>
+      <a class="sidenav-buttons" href="error_page.html">Blog</a>
       <a class="sidenav-buttons" href="about.html">About</a>
     </div>
     <!-- This is the end for Side Navigation -->
