--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Projects</a></li>
-          <li><a href="#">#</a></li>
-          <li><a href="#">#</a></li>
+          <li><a href="error_page.html">Blog</a></li>
+          <li><a href="error_page.html">Contacts</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
