--- a/inside/about.html
+++ b/inside/about.html
@@ -20,7 +20,7 @@
         
         <div class="modal-center">
           <h1 id="pfft">UNDER CONSTRUCTION... LEAVE NOW!!! </h1>
-          <p>Go back to <a href="index.html">Home!</a></p>
+          <p>Go back to <a href="homepage.html">Home!</a></p>
         </div>
 
         <footer class="modal-foot">
