--- a/inside/coffee_menu.html
+++ b/inside/coffee_menu.html
@@ -50,7 +50,7 @@
       </main>
       <hr class="bottom-line">
       <footer>
-        <p><a href="https://www.freecodecamp.org" target="_blank">Visit freecodecamp.com</a><a href="index.html" target="_blank" id="bye">Go back to Home</a></p>
+        <p><a href="https://www.freecodecamp.org" target="_blank">Visit freecodecamp.com</a><a href="homepage.html" target="_blank" id="bye">Go back to Home</a></p>
         <p><a href="index.html" target="_blank" id="hi">Go back to Home</a></p>
         <p class="address">123 Free Code Camp Drive</p>
       </footer>
