--- a/inside/homepage.html
+++ b/inside/homepage.html
@@ -11,13 +11,6 @@
   </head>
   <body>
 <!-- Website version -->
-    <div class="socialnav-container">
-      <div class="socialnav">
-        <a href="https://www.facebook.com/ChriscentProduction/" style="text-decoration: none; color: black;"><div class="facebook"><i class="fab fa-facebook"></i><p>Facebook</p></div></a>
-        <a href="instagram.com/kshn.shrills_0w0/" style="text-decoration: none; color: black;"><div class="instagram">Instagram</div></a>
-        <a href="https://twitter.com/BestieKishon" style="text-decoration: none; color: black;"><div class="twitter">Twitter</div></a>
-      </div>
-    </div>
     <div class="banner">
       <div class="navbar">
         <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" alt="Chriscent Production" class="logo"></a>
@@ -34,8 +27,8 @@
         <h1>Knowledge is Power</h1>
         <p>Always strive to learn new things and be sure to apply the Knowledge you <br> recieve into practice in order to understand the process!</p>
         <div id="socials">
-          <a href="https://www.facebook.com/ChriscentProduction/"><button type="button"><span></span>Visit my Facebook</button></a>
-          <a href="https://ngl.link/kshn.shrills_0w0"><button type="button"><span></span>Ask a Question</button></a>
+          <a href="https://www.facebook.com/ChriscentProduction/"><button type="button"><span class="ambot"></span>Visit my Facebook</button></a>
+          <a href="https://ngl.link/kshn.shrills_0w0"><button type="button"><span class="ambot"></span>Ask a Question</button></a>
         </div>
       </div>
 <!-- Phone Version -->
@@ -94,23 +87,37 @@
         </div>
       </section>
     </div>
-    <div class="custom-shape-divider-bottom-1666479870">
-      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
-          <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
-          <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
-      </svg>
-    </div>
-    <!--! Website Content -->
-    <div class="block2">
-      <div class="block2-card1">
-        <section>
-          <h1>!!!Under Construction!!!</h1>
-        </section>
-      </div>
-    </div>
-    <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 500" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#002bdc"></stop><stop offset="95%" stop-color="#32ded4"></stop></linearGradient></defs><path d="M 0,500 C 0,500 0,100 0,100 C 43.962600868750656,91.41004287087915 87.92520173750131,82.82008574175829 131,75 C 174.0747982624987,67.17991425824171 216.2617939187454,60.129699903845975 261,64 C 305.7382060812546,67.87030009615403 353.02762258751693,82.66111464285778 394,92 C 434.97237741248307,101.33888535714222 469.62771573118675,105.22584152472291 513,99 C 556.3722842688132,92.77415847527709 608.4615144877363,76.43551925825057 651,82 C 693.5384855122637,87.56448074174943 726.5262263178679,115.03208144227484 765,111 C 803.4737736821321,106.96791855772516 847.4335802407924,71.4361549726501 897,72 C 946.5664197592076,72.5638450273499 1001.7394527189629,109.22329866712471 1051,117 C 1100.2605472810371,124.77670133287529 1143.6086088833563,103.67065035885106 1183,89 C 1222.3913911166437,74.32934964114894 1257.8261117476125,66.09409989747112 1300,69 C 1342.1738882523875,71.90590010252888 1391.0869441261939,85.95295005126444 1440,100 C 1440,100 1440,500 1440,500 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="0.265" class="transition-all duration-300 ease-in-out delay-150 path-0"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#002bdc"></stop><stop offset="95%" stop-color="#32ded4"></stop></linearGradient></defs><path d="M 0,500 C 0,500 0,200 0,200 C 30.81684519203357,200.9432868382328 61.63369038406714,201.88657367646562 107,201 C 152.36630961593286,200.11342632353438 212.28208365576506,197.3969921323703 258,191 C 303.71791634423494,184.6030078676297 335.2379749928725,174.52545779405332 380,172 C 424.7620250071275,169.47454220594668 482.7660163727446,174.50117669141645 534,179 C 585.2339836272554,183.49882330858355 629.6979595161488,187.46983544028092 674,196 C 718.3020404838512,204.53016455971908 762.4421455626604,217.61948154745988 801,217 C 839.5578544373396,216.38051845254012 872.5334582332099,202.05223836987955 917,194 C 961.4665417667901,185.94776163012045 1017.4240215045004,184.171564973022 1061,194 C 1104.5759784954996,203.828435026978 1135.7704557487884,225.26150173803256 1173,221 C 1210.2295442512116,216.73849826196744 1253.4941555003463,186.78242807484784 1299,179 C 1344.5058444996537,171.21757192515216 1392.252922249827,185.60878596257606 1440,200 C 1440,200 1440,500 1440,500 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="0.4" class="transition-all duration-300 ease-in-out delay-150 path-1"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#002bdc"></stop><stop offset="95%" stop-color="#32ded4"></stop></linearGradient></defs><path d="M 0,500 C 0,500 0,300 0,300 C 48.99100614641972,301.7061547424471 97.98201229283944,303.41230948489425 138,302 C 178.01798770716056,300.58769051510575 209.06295697506198,296.0569168028701 244,298 C 278.937043024938,299.9430831971299 317.7661598069128,308.3600233036254 373,317 C 428.2338401930872,325.6399766963746 499.8724037972868,334.5029899826285 546,327 C 592.1275962027132,319.4970100173715 612.74422500394,295.6280167658606 649,297 C 685.25577499606,298.3719832341394 737.1506961869532,324.9849429539293 788,327 C 838.8493038130468,329.0150570460707 888.6529902482474,306.4322114184223 935,290 C 981.3470097517526,273.5677885815777 1024.2373428200574,263.2862113723816 1065,277 C 1105.7626571799426,290.7137886276184 1144.397638471523,328.4229430920511 1190,335 C 1235.602361528477,341.5770569079489 1288.1721032938506,317.02201625941393 1331,306 C 1373.8278967061494,294.97798374058607 1406.9139483530748,297.48899187029303 1440,300 C 1440,300 1440,500 1440,500 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="0.53" class="transition-all duration-300 ease-in-out delay-150 path-2"></path><defs><linearGradient id="gradient" x1="0%" y1="50%" x2="100%" y2="50%"><stop offset="5%" stop-color="#002bdc"></stop><stop offset="95%" stop-color="#32ded4"></stop></linearGradient></defs><path d="M 0,500 C 0,500 0,400 0,400 C 51.961641099378625,414.5936085026358 103.92328219875725,429.18721700527163 144,425 C 184.07671780124275,420.81278299472837 212.26851230434966,397.84474048154925 258,394 C 303.73148769565034,390.15525951845075 367.0026685838443,405.4338210685314 412,409 C 456.9973314161557,412.5661789314686 483.72081336027304,404.4199752443251 520,403 C 556.279186639727,401.5800247556749 602.1140779750638,406.88627795416835 643,416 C 683.8859220249362,425.11372204583165 719.8228747394721,438.0349129390016 763,435 C 806.1771252605279,431.9650870609984 856.5944230670475,412.97407028982553 911,398 C 965.4055769329525,383.02592971017447 1023.7994329923379,372.0688059016963 1068,381 C 1112.2005670076621,389.9311940983037 1142.2078449636015,418.75070610338946 1182,420 C 1221.7921550363985,421.24929389661054 1271.3691871532567,394.9283696847459 1316,387 C 1360.6308128467433,379.0716303152541 1400.3154064233718,389.53581515762704 1440,400 C 1440,400 1440,500 1440,500 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-3"></path></svg>
-<!-- Card Content -->
+
+    <footer>
+      <a href="#" class="icon facebook">
+        <div class="tooltip">
+          Facebook
+        </div>
+        <span class="ico"><i class="fab fa-facebook-f"></i></span>
+      </a>
+
+      <a href="https://twitter.com/BestieKishon" class="icon twitter">
+        <div class="tooltip">
+          Twitter
+        </div>
+        <span class="ico"><i class="fab fa-twitter"></i></span>
+      </a>
+
+      <a href="https://www.instagram.com/kshn.shrills_0w0/" class="icon instagram">
+        <div class="tooltip">
+          Instagram
+        </div>
+        <span class="ico"><i class="fab fa-instagram"></i></span>
+      </a>
+
+      <a href="https://github.com/KishonShrill" class="icon github">
+        <div class="tooltip">
+          Github
+        </div>
+        <span class="ico"><i class="fab fa-github"></i></span>
+      </a>
+    </footer>
+    <!--! Card Content -->
     <script>
       function openNav() {
         document.getElementById("mySidenav").style.width = "250px";
@@ -120,7 +127,4 @@
       }
     </script>
   </body>
-  <footer>
-<!-- Empty for Now!-->
-  </footer>
 </html>
