parallax go brrrrrrrrrrr...

--- a/inside/homepage.html
+++ b/inside/homepage.html
@@ -40,7 +40,7 @@
   </head>
   <body>
 <!-- Website version -->
-    <div class="parallax"></div>
+    <div class="parallax1"></div>
     <div class="banner">
       <div class="navbar">
         <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" alt="Chriscent Production" class="logo"></a>
@@ -117,6 +117,9 @@
         </div>
       </section>
     </div>
+
+    <div class="divider"></div>
+    <div class="parallax2"></div>
 
     <img src="images/Earth.png" class="earth">
 
