I'm gonna change the ugly homepage...

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </footer>
   <script>
     document.getElementById("guestButton").onclick = function () {
-      location.href = "inside/homepage.html";
+      location.href = "inside/index.html";
     };
   </script>
 </html>
