--- a/inside/cat.html
+++ b/inside/cat.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>CatPhotoApp</title>
-    <link href="css/cats.css" rel="stylesheet"/>
+    <link href="css/projects css/cats.css" rel="stylesheet"/>
   </head>
   <body>
     <main>
@@ -27,6 +27,7 @@
             <figcaption>Cats <em>love</em> lasagna.</figcaption>  
           </figure>
         </div>
+
         <div class="boxed" id="right">
           <h3>Top 3 things cats hate:</h3>
           <ol>
@@ -40,6 +41,7 @@
           </figure>
         </div>
       </section>
+
       <section>
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
