--- a/inside/homepage.html
+++ b/inside/homepage.html
@@ -34,7 +34,7 @@
       });
     });
     </script>
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/homepage.css" rel="stylesheet"/>
     <link href="css/phone_ver.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/sidenav.css">
   </head>
@@ -117,56 +117,12 @@
         </div>
       </section>
     </div>
-
-    <div class="divider"></div>
-    <div class="parallax2"></div>
-
-    <img src="images/Earth.png" class="earth">
-
-    <div class="block2">
-      <div class="block2-card2">
-        <div class="block2-card2-1">
-          <div class="tab">
-            <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">About Me</button>
-            <button class="tablinks" onclick="openCity(event, 'Paris')">Skills</button>
-            <button class="tablinks" onclick="openCity(event, 'Tokyo')">Passion</button>
-            <button class="tablinks" onclick="openCity(event, 'Manila')">Dream</button>
-            <button class="tablinks" onclick="openCity(event, 'Hongkong')">Silly Content</button>
-          </div>
-          
-          <div id="London" class="tabcontent">
-            <h3>London</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus nostrum eaque corrupti qui iusto sed aperiam quis iure modi, a doloribus similique perspiciatis, tempore asperiores earum voluptatem aliquam enim dolor. Placeat veniam officiis sit tenetur, quod culpa aliquid repellendus quidem blanditiis illo possimus, ipsum amet ad. Voluptatem quisquam consectetur dignissimos?</p>
-          </div>
-          
-          <div id="Paris" class="tabcontent">
-            <h3>Paris</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur temporibus sint dolor voluptatum modi culpa cupiditate, aliquam maxime adipisci, inventore dignissimos, provident laboriosam fugit ea possimus. Quibusdam esse nemo, incidunt voluptatum quisquam commodi deleniti aliquid quas eius fuga inventore veritatis omnis necessitatibus deserunt, blanditiis odio? Sapiente eius quo excepturi unde.</p>
-          </div>
-
-          <div id="Tokyo" class="tabcontent">
-            <h3>Tokyo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quisquam consequuntur error odio consequatur deleniti quas tempore, explicabo corporis possimus qui suscipit id illum molestiae esse sunt mollitia eveniet atque cumque quae inventore impedit quod? Impedit, et. Natus cumque explicabo dolorem eos numquam eligendi, est debitis inventore beatae possimus minus?</p>
-          </div>
-
-          <div id="Manila" class="tabcontent">
-            <h3>Dream</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod quos provident error, enim sapiente mollitia quisquam, sed sunt consequuntur sint, qui labore pariatur. Quis nihil cupiditate, libero sed doloribus esse consectetur corrupti, placeat repudiandae, nostrum vel? Distinctio cupiditate, assumenda, tenetur corporis vitae, temporibus qui corrupti modi dignissimos laudantium labore.</p>
-          </div>
-
-          <div id="Hongkong" class="tabcontent">
-            <h3>Hongkong</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eum, laborum veritatis, molestias nesciunt, deleniti ut quo assumenda corrupti facere consectetur omnis inventore nisi! Minima, corrupti voluptatibus dignissimos tempora atque excepturi et consequatur quisquam quae fugiat, eligendi maxime quas obcaecati. Doloremque nemo beatae eveniet eum eos consequuntur itaque omnis doloribus!</p>
-          </div>
-        </div>
-        <div class="block2-card2-2">
-          <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api/top-langs/?username=KishonShrill">
-          <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api?username=KishonShrill">
-        </div>
-      </div>
-    </div>
-
-    <footer>
+    <!--TODO: This pud -->
+    <!-- <img src="images/Earth.png" class="earth">
+    <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api/top-langs/?username=KishonShrill">
+    <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api?username=KishonShrill"> -->
+    <!--TODO: Transfer this to about page -->
+    <!-- <div class="media">
       <a href="#" class="icon facebook">
         <div class="tooltip">
           Facebook
@@ -194,7 +150,7 @@
         </div>
         <span class="ico"><i class="fab fa-github"></i></span>
       </a>
-    </footer>
+    <div> -->
     <!--! Card Content -->
     <script>
       /* Sidebar for Phone */
