I just found out about reverese directory...

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </footer>
   <script>
     document.getElementById("guestButton").onclick = function () {
-      location.href = "inside/index.html";
+      location.href = "main/index.html";
     };
   </script>
 </html>
