--- a/main/index.html
+++ b/main/index.html
@@ -47,30 +47,41 @@
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
-      <div class="parallax1"></div>
+      <div class="parallax1">
+        <h1>  </h1>
+        <p></p>
+      </div>
     </header>
     <main>
       <h1>Recent Projects</h1>
       <div class="container1">
+        <!--TODO: New Card Content -->
+        <figure class="card">
+          <div class="caption">
+            <p>New Content Undergoing</p>
+          </div>
+          <a href="error_page.html"><img class="thumbnail" src="css/underconstruction.png" alt=""></a>
+        </figure>
+
         <figure class="card">
           <div class="caption">
             <p>QR Code Card using Flexbox</p>
           </div>
-          <a href=""><img class="thumbnail" src="pics/project/desktop-design.jpg" alt=""></a>
+          <a href="projects/qr-code-component.html"><img class="thumbnail" src="pics/project/desktop-design.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
           <div class="caption">
             <p>Coffee menu from FreeCodeCamp</p>
           </div>
-          <a href="coffee_menu.html"></a><img class="thumbnail" href="" src="pics/project/coffee_menu.jpg" alt=""></a>
+          <a href="projects/coffee_menu.html"><img class="thumbnail" href="" src="pics/project/coffee_menu.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
           <div class="caption">
-            <p>Cats from FreeCodeCamp modified w/ Flexbox</p>
+            <p>Cats from FreeCodeCamp w/ Flexbox</p>
           </div>
-          <a href="cat.html"></a><img class="thumbnail" src="pics/project/cats.jpg" alt=""></a>
+          <a href="projects/cat.html"><img class="thumbnail" src="pics/project/cats.jpg" alt=""></a>
         </figure>
 
       <!-- <div class="information"> -->
