--- a/main/Projects/cat.html
+++ b/main/Projects/cat.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>CatPhotoApp</title>
-    <link href="css/projects css/cats.css" rel="stylesheet"/>
+    <link href="css/cats.css" rel="stylesheet"/>
   </head>
   <body>
     <main>
@@ -10,7 +10,7 @@
       <section>
         <h2>Cat Photos</h2>
         <!-- TODO: Add link to cat photos -->
-        <p>Click here to go back <a target="_blank" href="homepage.html">Home!</a>.</p>
+        <p>Click here to go back <a target="_blank" href="../index.html">Home!</a>.</p>
         <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
       </section>
       <section class="st-line">
