--- a/main/Projects/coffee_menu.html
+++ b/main/Projects/coffee_menu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Menu</title>
-    <link href="css/projects css/coffee_menu.css" rel="stylesheet"/>
+    <link href="css/coffee_menu.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="menu">
@@ -54,6 +54,19 @@
         <p><a href="index.html" target="_blank" id="hi">Go back to Home</a></p>
         <p class="address">123 Free Code Camp Drive</p>
       </footer>
+
+      <div class="attribution">
+        <div class="attribleft">
+          <p class="web">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+          Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+          <p class="phone">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+            <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+        </div>
+        <div class="attribright">
+          <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+        </div>
+        
+      </div>
     </div>
   </body>
 </html>
