--- a/main/Projects/qr-code-component.html
+++ b/main/Projects/qr-code-component.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/projects css/qr-code.css">
+  <link rel="stylesheet" href="css/qr-code.css">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
 
   <title>Frontend Mentor | QR code component</title>
@@ -19,10 +19,15 @@
   </div>
 
   <div class="attribution">
-    <p class="web">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
-    <p class="phone">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
-      <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+    <div class="attribleft">
+      <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+      <p class="phone">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+        <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+    </div>
+    <div class="attribright">
+      <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+    </div>
   </div>
 </body>
 </html>
