--- a/main/error_page.html
+++ b/main/error_page.html
@@ -16,7 +16,7 @@
       <div class="navbar">
         <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" class="logo" !important></a>
         <ul>
-          <li><a href="homepage.html" style="color: blue;"><b>Home</b></a></li>
+          <li><a href="index.html" style="color: blue;"><b>Home</b></a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contacts</a></li>
