--- a/main/index.html
+++ b/main/index.html
@@ -47,7 +47,7 @@
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
-      <div class="parallax1">
+      <div class="firstview">
         <h1>  </h1>
         <p></p>
       </div>
