--- a/main/index.html
+++ b/main/index.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="64x64" href="images/Earth.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/sidenav.css">
+    <link rel="icon" type="image/png" sizes="64x64" href="images/Earth.png">
 
     <title>Chriscent's Portfolio -  Projects made with my Freetime after School</title>
     <script src="https://kit.fontawesome.com/31dfec9376.js" crossorigin="anonymous"></script>
@@ -56,7 +57,7 @@
         <i onclick="openNav()"><img class="openbtn" src="pics/hamburgerIcon.png" alt=""></i>
       </div>
 
-      <ul id="mySidepanel" class="sidepanel">
+      <ul id="mySidepanel" class="sidepanel" style="width: 0%;">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -116,9 +117,8 @@
     function openNav() {
       document.getElementById("mySidepanel").style.width = "100%";
     }
-
     function closeNav() {
-      document.getElementById("mySidepanel").style.width = "0";
+      document.getElementById("mySidepanel").style.width = "0%";
     }
   </script>
 </html>
