adding magic to my cauldron!

--- a/main/homepage.html
+++ b/main/homepage.html
@@ -122,7 +122,7 @@
     <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api/top-langs/?username=KishonShrill">
     <img style="border: 1px solid #ccc; border-radius: 15px; height: 300px;" src="https://github-readme-stats.vercel.app/api?username=KishonShrill"> -->
     <!--TODO: Transfer this to about page -->
-    <!-- <div class="media">
+    <div class="media">
       <a href="#" class="icon facebook">
         <div class="tooltip">
           Facebook
@@ -150,7 +150,7 @@
         </div>
         <span class="ico"><i class="fab fa-github"></i></span>
       </a>
-    <div> -->
+    <div>
     <!--! Card Content -->
     <script>
       /* Sidebar for Phone */
