--- a/main/projects.html
+++ b/main/projects.html
@@ -16,7 +16,7 @@
       <div class="navbar">
         <a href="https://www.facebook.com/ChriscentProduction/" class="logo"><img src="pics/myLogo.png" class="logo" !important></a>
         <ul>
-          <li><a href="homepage.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="error_page.html">Blog</a></li>
           <li><a href="error_page.html">Contacts</a></li>
