--- a/main/index.html
+++ b/main/index.html
@@ -121,21 +121,21 @@
           <div class="caption">
             <p>QR Code Card using Flexbox</p>
           </div>
-          <a href="projects/qr-code-component.html"><img class="thumbnail" src="pics/project/desktop-design.jpg" alt=""></a>
+          <a href="Projects/qr-code-component.html"><img class="thumbnail" src="pics/project/desktop-design.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
           <div class="caption">
             <p>Coffee menu from FreeCodeCamp</p>
           </div>
-          <a href="projects/coffee_menu.html"><img class="thumbnail" href="" src="pics/project/coffee_menu.jpg" alt=""></a>
+          <a href="Projects/coffee_menu.html"><img class="thumbnail" href="" src="pics/project/coffee_menu.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
           <div class="caption">
             <p>Cats from FreeCodeCamp w/ Flexbox</p>
           </div>
-          <a href="projects/cat.html"><img class="thumbnail" src="pics/project/cats.jpg" alt=""></a>
+          <a href="Projects/cat.html"><img class="thumbnail" src="pics/project/cats.jpg" alt=""></a>
         </figure>
 
       <!-- <div class="information"> -->
