Working Pre-load and adding phone version...

--- a/account_register.html
+++ b/account_register.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/login.css"> 
   </head>
   <body>
+    <video autoplay muted loop>
+      <source src="misc/easyanimate loop.mp4" type="video/mp4">
+    </video>
     <div class="login-card">
         <h1>Online Registration</h1>
         <p>Please type in the code that your Administrator gave you to recieve access to the EWB Online Website</p>
@@ -16,7 +19,7 @@
       </form>
       <p></p>
       <div class="login-help">
-        <a href="index.html">Log-in</a> • <a href="forgot-password.html">Forgot Password</a>
+        <a href="index.html">Log-in</a> • <a href="account_forgot-password.html">Forgot Password</a>
       </div>
     </div>
   </body>
