--- a/main/projects.html
+++ b/main/projects.html
@@ -5,6 +5,7 @@
   
     <title>Projects - Image Gallery</title>
     <link rel="stylesheet" href="css/projects.css?v=1.0">
+    <link rel="stylesheet" href="css/preload.css">
     <meta name="description" content="Responsive Image Gallery">
     <meta name="author" content="Chriscent Pingol">
   
