--- a/account_find-account.html
+++ b/account_find-account.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/login.css"> 
   </head>
   <body>
+    <video autoplay muted loop>
+      <source src="misc/easyanimate loop.mp4" type="video/mp4">
+    </video>
     <div class="login-card">
         <h1>Forgot Password <small>- step 2</small></h1>
         <p>Enter your name, e.x. FirstName LastName</p>
