--- a/account_forgot-password.html
+++ b/account_forgot-password.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/login.css"> 
   </head>
   <body>
+    <video autoplay muted loop>
+      <source src="misc/easyanimate loop.mp4" type="video/mp4">
+    </video>
     <div class="login-card">
         <h1>Forgot Password <small>- step 1</small></h1>
         <p>If you forgot your username, please contact your Administrator.</p>
@@ -16,7 +19,7 @@
       </form>
       <p></p>
       <div class="login-help">
-        <a href="index.html">Log-in</a> • <a href="account_register.html">Register</a>
+        <a href="index.html">Log-in</a> • <a href="account_find-account.html">Password</a>
       </div>
     </div>
   </body>
