--- a/homepage/projects/qr-code-component.html
+++ b/homepage/projects/qr-code-component.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="qr-code-component-main/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/qr-code.css">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
 
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="images/image-qr-code.png" alt="">
+    <img src="qr-code-component-main/images/image-qr-code.png" alt="">
     <h2><b>Improve your front-end <br> skills by building projects</b></h2>
     <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
   </div>
