--- a/homepage/projects/product-preview-card-component.html
+++ b/homepage/projects/product-preview-card-component.html
@@ -29,13 +29,13 @@
     </section>
   </main>
   
-  <!--! <div class="attribution">
+  <div class="attribution">
     <div>
       <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
       Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
     </div>
 
     <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
-  </div> -->
+  </div>
 </body>
 </html>
