--- a/homepage/projects/product-preview-card-component.html
+++ b/homepage/projects/product-preview-card-component.html
@@ -31,7 +31,7 @@
   
   <div class="attribution">
     <div>
-      <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+      <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa" target="_blank"> Frontend Mentor</a>. 
       Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
     </div>
 
